202030711-移除系統工具列

--- a/assets/scss/page/_main_banner.scss
+++ b/assets/scss/page/_main_banner.scss
@@ -1,6 +1,6 @@
 // @import '../mixins/breakpoint';
 .visionSect {
-  margin-top: 36px;
+  // margin-top: 36px;
   display: flex;
   justify-content: center;
   align-items: flex-end;
@@ -10,7 +10,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   @include b551 {
-    margin-top: 50px;
+    // margin-top: 50px;
   }
   @include b768 {
     background-size: 100% auto;
